--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.3.5",
     "bootstrap": "5.1.3",
     "chart.js": "3.6.0",
+    "cookiejs": "^2.1.2",
     "core-js": "^3.30.0",
     "core-js-pure": "^3.30.0",
     "dropzone": "6.0.0-beta.1",
