--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookiejs": "^2.1.2",
     "core-js": "^3.30.0",
     "core-js-pure": "^3.30.0",
+    "debounce": "^1.2.1",
     "dropzone": "6.0.0-beta.1",
     "quill": "1.3.6",
     "vue": "^3.2.47",
