--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "quill": "1.3.6",
     "vue": "^3.2.47",
     "vue-flatpickr-component": "9.0.5",
+    "vue-linkify": "^1.0.1",
     "vue-router": "4.0.14",
     "vuex": "4.0.2"
   },
